ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/Roofing_System_Warranty__c.object-meta.xml
<CustomObject>
    <label>Roofing System &amp; Warranty</label>
    <nameField>
        <label>Roofing S&amp;W Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roofing Systems &amp; Warranties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>