ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Ancillary_Items__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Items__c</fullName>
    <label>Auxiliary Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modiflex Roof Tape</fullName>
            </value>
            <value>
                <fullName>TorchTape 180-FF</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-250-Cap 5.0</fullName>
            </value>
            <value>
                <fullName>AquaBarrier Mastic</fullName>
            </value>
            <value>
                <fullName>ArmourReflect White Coat</fullName>
            </value>
            <value>
                <fullName>MS Detail</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-180-FF</fullName>
                <isActive>false</isActive>
                <label>Torchflex TP-180-FF</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>