ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Auxiliary_Board_Application__c.field-meta.xml
<CustomField>
    <fullName>Auxiliary_Board_Application__c</fullName>
    <label>Auxiliary Leveling Board Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Auxiliary_Leveling_Board__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type II Asphalt</fullName>
            </value>
            <value>
                <fullName>Type III Asphalt</fullName>
            </value>
            <value>
                <fullName>Millennium Adhesive</fullName>
            </value>
            <value>
                <fullName>Mechanically Attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>