ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Auxiliary_Leveling_Board__c.field-meta.xml
<CustomField>
    <fullName>Auxiliary_Leveling_Board__c</fullName>
    <label>Auxiliary Leveling Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gypsum Board</fullName>
            </value>
            <value>
                <fullName>Cement Board</fullName>
            </value>
            <value>
                <fullName>Mineral Wool</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>