ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Base_Sheet_Field__c.field-meta.xml
<CustomField>
    <fullName>Base_Sheet_Field__c</fullName>
    <label>Base Sheet (Field)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fast n Stick 180 Base</fullName>
            </value>
            <value>
                <fullName>Fast n Stick HD Base</fullName>
            </value>
            <value>
                <fullName>Armourbond Flash</fullName>
            </value>
            <value>
                <fullName>Armourbond Flash HD</fullName>
            </value>
            <value>
                <fullName>Armourbond Flash Sand</fullName>
            </value>
            <value>
                <fullName>Armourbond Flash Sand HD</fullName>
            </value>
            <value>
                <fullName>Armourbond 180</fullName>
            </value>
            <value>
                <fullName>Armourvent Base</fullName>
            </value>
            <value>
                <fullName>Armourvent HD Base</fullName>
            </value>
            <value>
                <fullName>ArmourStick HD Base</fullName>
            </value>
            <value>
                <fullName>Modiflex MF-95-SS Base</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180-FS Base</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180-FS Base (3.0mm)</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180-SS Base</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180-SS Base (3.0mm)</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-HD-FS Base</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-HD-SS Base</fullName>
            </value>
            <value>
                <fullName>Torchflex TF-95-SF Base</fullName>
            </value>
            <value>
                <fullName>Torchflex TF-95-FF Base</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-180-FF Base</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-180-SF Base</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-HD-FF Base</fullName>
            </value>
            <value>
                <fullName>IKO No. 15 Felt Perforated</fullName>
            </value>
            <value>
                <fullName>IKO Type IV Glass Felt</fullName>
            </value>
            <value>
                <fullName>IKO Type VI Glass Felt</fullName>
                <label>IKO Type 6 Glass Felt</label>
            </value>
            <value>
                <fullName>Protectobase 180</fullName>
                <isActive>false</isActive>
                <label>Protectobase 180</label>
            </value>
            <value>
                <fullName>Torchflex TF-95-FF Base (2.2mm)</fullName>
                <isActive>false</isActive>
                <label>Torchflex TF-95-FF Base (2.2mm)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>