ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Base_Sheet_Flashing__c.field-meta.xml
<CustomField>
    <fullName>Base_Sheet_Flashing__c</fullName>
    <label>Base Sheet (Flashing)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armourbond Flash</fullName>
            </value>
            <value>
                <fullName>Armourbond Flash HD</fullName>
            </value>
            <value>
                <fullName>Armourbond Flash Sand</fullName>
            </value>
            <value>
                <fullName>Armourbond Flash Sand HD</fullName>
            </value>
            <value>
                <fullName>Armourbond 180</fullName>
            </value>
            <value>
                <fullName>Armourvent Base</fullName>
            </value>
            <value>
                <fullName>Armourvent HD Base</fullName>
            </value>
            <value>
                <fullName>ArmourStick HD Base</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180-FS Base</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180-FS Base (3.0mm)</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180-SS Base</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180-SS Base (3.0mm)</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-HD-FS Base</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-HD-SS Base</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-180-FF Base</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-180-SF Base</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-HD-FF Base</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>