ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Cap_Sheet_Field__c.field-meta.xml
<CustomField>
    <fullName>Cap_Sheet_Field__c</fullName>
    <label>Cap Sheet (Field)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Torchflex TP-180 Cap</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-250 Cap</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-250 Cap (5.0mm)</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-HD Cap</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180 Cap</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-250 Cap</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-HD Cap</fullName>
            </value>
            <value>
                <fullName>PrevENt Torchflex TP-250 Cap</fullName>
            </value>
            <value>
                <fullName>PrevENt Torchflex TP-HD Cap</fullName>
            </value>
            <value>
                <fullName>PrevENt Modiflex MP-250 Cap</fullName>
            </value>
            <value>
                <fullName>PrevENt Modiflex MP-HD Cap</fullName>
            </value>
            <value>
                <fullName>PrevENt Armourcool Granular HD Cap</fullName>
            </value>
            <value>
                <fullName>Armourcool TP-HD Cap</fullName>
                <label>Armourcool Granular TP-HD Cap</label>
            </value>
            <value>
                <fullName>Armourplast Granular APP</fullName>
            </value>
            <value>
                <fullName>Armourplast Classic</fullName>
            </value>
            <value>
                <fullName>Armourplast Classic (5.0mm)</fullName>
            </value>
            <value>
                <fullName>ArmourStick HD Cap</fullName>
            </value>
            <value>
                <fullName>IKO No. 15 Felt Perforated</fullName>
            </value>
            <value>
                <fullName>IKO Type IV Glass Felt</fullName>
            </value>
            <value>
                <fullName>IKO Type 6 Glass Felt</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180-SS</fullName>
                <isActive>false</isActive>
                <label>Modiflex MP-180-SS</label>
            </value>
            <value>
                <fullName>Modiflex MP-180-SS Base</fullName>
                <isActive>false</isActive>
                <label>Modiflex MP-180-SS Base</label>
            </value>
            <value>
                <fullName>Modiflex MP-180-SS Base(3.0 MM)</fullName>
                <isActive>false</isActive>
                <label>Modiflex MP-180-SS Base(3.0 MM)</label>
            </value>
            <value>
                <fullName>Modiflex MP-HD-SS</fullName>
                <isActive>false</isActive>
                <label>Modiflex MP-HD-SS</label>
            </value>
            <value>
                <fullName>Torchflex TP-180 FF</fullName>
                <isActive>false</isActive>
                <label>Torchflex TP-180 FF</label>
            </value>
            <value>
                <fullName>Torchflex TP-HD-FF</fullName>
                <isActive>false</isActive>
                <label>Torchflex TP-HD-FF</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>