ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Cap_Sheet_Field_Application__c.field-meta.xml
<CustomField>
    <fullName>Cap_Sheet_Field_Application__c</fullName>
    <label>Cap Sheet (Field) Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cap_Sheet_Field__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type II Asphalt</fullName>
            </value>
            <value>
                <fullName>Type III Asphalt</fullName>
            </value>
            <value>
                <fullName>SEBS Asphalt</fullName>
                <label>Modi-Melt SEBS Asphalt</label>
            </value>
            <value>
                <fullName>Torch Applied</fullName>
            </value>
            <value>
                <fullName>Cold Gold Field Adhesive</fullName>
            </value>
            <value>
                <fullName>Peel &amp; Stick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>