ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Cap_Sheet_Flashing__c.field-meta.xml
<CustomField>
    <fullName>Cap_Sheet_Flashing__c</fullName>
    <label>Cap Sheet (Flashing)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Torchflex TP-180 Cap</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-250 Cap</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-250 Cap (5.0mm)</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-HD Cap</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180 Cap</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-250 Cap</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-HD Cap</fullName>
            </value>
            <value>
                <fullName>PrevENt Torchflex TP-250 Cap</fullName>
            </value>
            <value>
                <fullName>PrevENt Torchflex TP-HD Cap</fullName>
            </value>
            <value>
                <fullName>PrevENt Modiflex MP-250 Cap</fullName>
            </value>
            <value>
                <fullName>PrevENt Modiflex MP-HD Cap</fullName>
            </value>
            <value>
                <fullName>PrevENt Armourcool Granular HD Cap</fullName>
            </value>
            <value>
                <fullName>Armourcool Granular TP-HD Cap</fullName>
            </value>
            <value>
                <fullName>Armourplast Granular APP</fullName>
            </value>
            <value>
                <fullName>Armourplast Granular Classic</fullName>
            </value>
            <value>
                <fullName>Armourplast Granular Classic (5.0mm)</fullName>
            </value>
            <value>
                <fullName>ArmourStick HD Cap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>