ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to determine when all entered fields need to be pushed to the parent (Opportunity) record.</description>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>