ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Coverboard__c.field-meta.xml
<CustomField>
    <fullName>Coverboard__c</fullName>
    <label>Coverboard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CoverShield</fullName>
            </value>
            <value>
                <fullName>Fibreboard</fullName>
            </value>
            <value>
                <fullName>Gypsum Board</fullName>
            </value>
            <value>
                <fullName>Mineral Wool</fullName>
            </value>
            <value>
                <fullName>ProtectoBase 180</fullName>
            </value>
            <value>
                <fullName>Protectoboard</fullName>
            </value>
            <value>
                <fullName>Protectoboard 1/2&quot; (12.7mm)</fullName>
                <label>Protectoboard 1/2&quot;(12.7mm)</label>
            </value>
            <value>
                <fullName>Protectoboard 1/4&quot; (6.0mm)</fullName>
            </value>
            <value>
                <fullName>Protectoboard 1/8&quot; (3.0mm)</fullName>
            </value>
            <value>
                <fullName>Protectoboard 3/16&quot; (4.8mm)</fullName>
            </value>
            <value>
                <fullName>Roofkraft Base F/R 180</fullName>
            </value>
            <value>
                <fullName>Roofkraft Base F/R 95</fullName>
            </value>
            <value>
                <fullName>ShieldBase 180</fullName>
            </value>
            <value>
                <fullName>ShieldBase Sand</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>