ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Coverboard_Application__c.field-meta.xml
<CustomField>
    <fullName>Coverboard_Application__c</fullName>
    <label>Coverboard Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Coverboard__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type II Asphalt</fullName>
            </value>
            <value>
                <fullName>Type III Asphalt</fullName>
            </value>
            <value>
                <fullName>SEBS Asphalt</fullName>
                <label>Modi-Melt SEBS Asphalt</label>
            </value>
            <value>
                <fullName>Millennium Adhesive</fullName>
            </value>
            <value>
                <fullName>Mechanically Attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>