ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/CSA_A123_21_14_or_RoofNav__c.field-meta.xml
<CustomField>
    <fullName>CSA_A123_21_14_or_RoofNav__c</fullName>
    <description>CSA A123.21-14 Assembly number of FM RoofNav number (if applicable)</description>
    <label>CSA A123.21-14 or RoofNav</label>
    <length>255</length>
    <type>Text</type>
</CustomField>