ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Flood_Coat_Application__c.field-meta.xml
<CustomField>
    <fullName>Flood_Coat_Application__c</fullName>
    <label>Flood Coat Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Flood_Coat__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type II Asphalt</fullName>
            </value>
            <value>
                <fullName>Type III Asphalt</fullName>
            </value>
            <value>
                <fullName>SEBS Asphalt</fullName>
                <label>Modi-Melt SEBS Asphalt</label>
            </value>
            <value>
                <fullName>Cold Gold Field Adhesive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>