ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Insulation_Thickness_Details__c.field-meta.xml
<CustomField>
    <fullName>Insulation_Thickness_Details__c</fullName>
    <label>Insulation Thickness Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>