ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Intermediate_Ply_Application__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Ply_Application__c</fullName>
    <label>Intermediate Ply Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Intermediate_Ply__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAM Adhesive</fullName>
            </value>
            <value>
                <fullName>SAM Adhesive LVC</fullName>
            </value>
            <value>
                <fullName>Type II Asphalt</fullName>
            </value>
            <value>
                <fullName>Type III Asphalt</fullName>
            </value>
            <value>
                <fullName>Modi-Melt SEBS Asphalt</fullName>
            </value>
            <value>
                <fullName>Torch Applied</fullName>
            </value>
            <value>
                <fullName>Cold Gold Field Adhesive</fullName>
            </value>
            <value>
                <fullName>Mechanically Attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>