ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Number_of_Plies_Base_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Plies_Base_Sheet__c</fullName>
    <label>Number of Plies</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Base_Sheet_Field__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
            <value>
                <fullName>Five</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>