ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Primers__c.field-meta.xml
<CustomField>
    <fullName>Primers__c</fullName>
    <label>Primers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IKO Mod Bit Primer</fullName>
            </value>
            <value>
                <fullName>IKO Standard Asphalt Primer</fullName>
            </value>
            <value>
                <fullName>IKO Spray Primer</fullName>
            </value>
            <value>
                <fullName>IKO Water Based Adhesive</fullName>
                <isActive>false</isActive>
                <label>IKO Water Based Adhesive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>