ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Roof_Size_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Roof_Size_sq_ft__c</fullName>
    <label>Roof Size (sq/ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>